Upgrade Velocity from 1.4 to 1.6. Watch out for the new velocity groupId:
http://mail-archives.apache.org/mod_mbox/www-announce/200812.mbox/%3C4d651da50812022204m2aed0c03idd34b002ebb6785d@mail.gmail.com%3E

--- a/message/impl/pom.xml
+++ b/message/impl/pom.xml
@@ -38,9 +38,9 @@
       <version>1.4</version>
     </dependency>
     <dependency>
-      <groupId>velocity</groupId>
+      <groupId>org.apache.velocity</groupId>
       <artifactId>velocity</artifactId>
-      <version>1.4</version>
+      <version>1.6</version>
     </dependency>
     <dependency>
       <groupId>commons-collections</groupId>
