maven-license-plugin configuration is not inherited

--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,7 @@
       <plugin>
          <groupId>com.google.code.maven-license-plugin</groupId>
          <artifactId>maven-license-plugin</artifactId>
+         <inherited>false</inherited>
          <configuration>
              <quiet>false</quiet>
              <header>src/HEADER.txt</header>
