--- a/gis/pom.xml
+++ b/gis/pom.xml
@@ -23,6 +23,11 @@
       <artifactId>spring-jdbc</artifactId>
     </dependency>
     <dependency>
+         <groupId>net.sf.ehcache</groupId>
+         <artifactId>ehcache</artifactId>
+         <version>1.2.3</version>
+    </dependency>
+    <dependency>
       <groupId>postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>8.2-504.jdbc3</version>
