--- a/facebook/pom.xml
+++ b/facebook/pom.xml
@@ -18,9 +18,9 @@
           <artifactId>commons-lang</artifactId>
       </dependency>
       <dependency>
-          <groupId>com.facebook.api</groupId>
+          <groupId>com.google.code.facebookapi</groupId>
           <artifactId>facebook-java-api</artifactId>
-          <version>1.8</version>
+          <version>2.0.4</version>
       </dependency>
       <dependency>
             <groupId>org.springframework</groupId>
