--- a/auth/password/pom.xml
+++ b/auth/password/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>ar.com.zauber.commons.auth</groupId>
-    <version>3.7-SNAPSHOT</version>
+    <version>3.7</version>
   </parent>
   <name>Zauber::Commons::Auth::Password</name>
   <artifactId>commons-auth-password</artifactId>
