--- a/message/pom.xml
+++ b/message/pom.xml
@@ -3,7 +3,7 @@
   <parent>
      <artifactId>zauber-commons-parent</artifactId>
      <groupId>ar.com.zauber.commons</groupId>
-     <version>3.8-SNAPSHOT</version>
+     <version>3.8</version>
   </parent>
   <name>Zauber::Commons::Message</name>
   <groupId>ar.com.zauber.commons.message</groupId>
