Nuevo componente SEOStrategy que arma lindos links...por ejemplo una implementacion podria decir  /5/12/ o  /5-buenos-aires/12-tres-arroyos/

--- a/web/utils/pom.xml
+++ b/web/utils/pom.xml
@@ -18,6 +18,10 @@
        <artifactId>servlet-api</artifactId>
        <scope>provided</scope>
      </dependency>
+     <dependency>
+       <artifactId>commons-repository-api</artifactId>
+       <groupId>ar.com.zauber.commons.repository</groupId>
+     </dependency>
 
 
   </dependencies>
