--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -24,7 +24,12 @@
       <version>${pom.version}</version>
       <scope>provided</scope>
     </dependency>
-
+    <dependency>
+      <groupId>ar.com.zauber.commons.web</groupId>
+      <artifactId>commons-web-utils</artifactId>
+      <version>${pom.version}</version>
+      <scope>provided</scope>
+    </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
