commons-web-utils: LinksHelper era la clase que armaba los links asia el context path de la aplicacion. La implementacion previa generaba paths absolutos, lo que era un gran problema para desplegar aplicaciones detras de proxies. ahora GENERA LINKS RELATIVOS.

--- a/web/utils/pom.xml
+++ b/web/utils/pom.xml
@@ -22,7 +22,15 @@
        <artifactId>commons-repository-api</artifactId>
        <groupId>ar.com.zauber.commons.repository</groupId>
      </dependency>
-
-
+    <dependency>
+       <artifactId>spring-test</artifactId>
+       <groupId>org.springframework</groupId>
+       <scope>test</scope>
+    </dependency>
+    <dependency>
+       <artifactId>spring-core</artifactId>
+       <groupId>org.springframework</groupId>
+       <scope>test</scope>
+     </dependency>
   </dependencies>
 </project>
