--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
   <name>Zauber::Commons</name>
   <groupId>ar.com.zauber.commons</groupId>
   <artifactId>zauber-commons-parent</artifactId>
-  <version>3.9-SNAPSHOT</version>
+  <version>3.9</version>
   <packaging>pom</packaging>
 
   <scm>
-     <connection>scm:svn:https://code.zauber.com.ar/repos/sandbox/components/commons/code/trunk/</connection>
-     <developerConnection>scm:svn:https://code.zauber.com.ar/repos/sandbox/components/commons/code/trunk/</developerConnection>
-     <url>https://code.zauber.com.ar/repos/sandbox/components/commons/code/trunk/</url>
+     <connection>scm:svn:https://code.zauber.com.ar/repos/sandbox/components/commons/code/releases/3.9/</connection>
+     <developerConnection>scm:svn:https://code.zauber.com.ar/repos/sandbox/components/commons/code/release/3.9/</developerConnection>
+     <url>https://code.zauber.com.ar/repos/sandbox/components/commons/code/releases/3.9/</url>
   </scm>
 
   <licenses>
