zauber commons now uses recently released maven doxia 1.1:
The Maven team is pleased to announce the release of the Maven Doxia,
Doxia Sitetools, version 1.1 and Maven Doxia Tools, version 1.0.

Doxia is a content generation framework which aims to provide its
users with powerful techniques for generating static and dynamic
content: Doxia can be used in web-based publishing context to generate
static sites, in addition to being incorporated into dynamic content
generation systems like blogs, wikis and content management systems.

http://maven.apache.org/doxia/

Release Notes - Maven Doxia - Version 1.1

** Bug
   * [DOXIA-51] - RtfSink supports only ".ppm" image type in figureGraphics()
   * [DOXIA-59] - Doxia creates files with inconsistent new lines
   * [DOXIA-99] - Figures require extension in APT and they should not
   * [DOXIA-127] - Twiki module cannot parse two forced links in the
same paragraph
   * [DOXIA-148] - FmlParser emits HTML specific events
   * [DOXIA-152] - Xdoc parser shouldn't insert anchors for section titles
   * [DOXIA-156] - XhtmlSink#tableCell( boolean headerRow, String
width ) uses a COLSPAN attribute instead of WIDTH attribute
   * [DOXIA-157] - Doxia Book doesn't work with xdoc source files
   * [DOXIA-160] - Book output in doc-book format is not well formed
   * [DOXIA-161] - filename with dot have a false output name
   * [DOXIA-162] - Failure to parse paragraph line with an EOL
   * [DOXIA-166] - Book output ignores book, chapter and section titles
   * [DOXIA-168] - Confluence module does not allow nested formatting
- e.g. a bullet cannot contain *bold* text or a [link]
   * [DOXIA-169] - Confluence module does not recognize line breaks (\\)
   * [DOXIA-171] - Confluence "quote" macro not recognised
   * [DOXIA-173] - Support for Confluence anchor macro
   * [DOXIA-175] - Confluence module does not recognise backslash as
escape character
   * [DOXIA-176] - Confluence parser doesn't strip leading space for
section titles
   * [DOXIA-

--- a/pom.xml
+++ b/pom.xml
@@ -166,7 +166,7 @@
       <spring.security.version>2.0.4</spring.security.version>
       <hibernate.version>3.2.6.ga</hibernate.version>
       <hibernate.annotations.version>3.3.0.ga</hibernate.annotations.version>
-      <doxia.version>1.0-beta-1-zauber-r669205</doxia.version>
+      <doxia.version>1.1</doxia.version>
       <jetty.version>6.1.9</jetty.version>
   </properties>
   <dependencyManagement>
