--- a/repository/impl/spring-hbm/pom.xml
+++ b/repository/impl/spring-hbm/pom.xml
@@ -21,7 +21,7 @@
     </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
-      <artifactId>hibernate</artifactId>
+      <artifactId>hibernate-core</artifactId>
     </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
@@ -30,11 +30,30 @@
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-commons-annotations</artifactId>
+      <version>3.3.0.ga</version> <!-- should be 3.4.0 but is not in the repo -->
+      <exclusions>
+         <exclusion>
+           <groupId>org.hibernate</groupId>
+           <artifactId>hibernate</artifactId>
+         </exclusion>
+      </exclusions>
     </dependency>
+
+    <dependency>
+      <groupId>javassist</groupId>
+      <artifactId>javassist</artifactId>
+      <version>3.4.GA</version>
+    </dependency>
+    <dependency>
+       <groupId>org.slf4j</groupId>
+       <artifactId>slf4j-log4j12</artifactId>
+       <version>1.5.2</version>
+     </dependency>
+
+
 	<dependency>
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-context-support</artifactId>
-		<version>${spring.version}</version>
 	</dependency>    
 	<dependency>
 		<groupId>org.springframework</groupId>
@@ -57,16 +76,6 @@
         <artifactId>spring-security-core-tiger</artifactId>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-    </dependency>
-	<!-- dependency>
-	  <groupId>org.springframework</groupId>
-	  <artifactId>spring-mock</artifactId>
-	  <version>${spring.version}</version>
-	</dependency -->
-    <dependency>
       <groupId>commons-beanutils</groupId>
       <artifactId>commons-beanutils</artifactId>
       <version>1.7.0</version>
@@ -82,14 +91,10 @@
       <version>1.2.2</version>
 	  <scope>test</scope>      
     </dependency>         
-    <!-- dependency>
-      <groupId>javax.persistence</groupId>
-      <artifactId>persistence-api</artifactId>
-      <version>1.0</version>      
-    </dependency -->
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>hsqldb</groupId>
