--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
      <artifactId>bare</artifactId>
      <groupId>ar.com.zauber.maven.poms</groupId>
-     <version>1.0.2</version>
+     <version>1.0.5</version>
   </parent>
   <name>Zauber::Commons</name>
   <groupId>ar.com.zauber.commons</groupId>
@@ -13,10 +13,19 @@
   <packaging>pom</packaging>
   <repositories>
     <repository>
-      <id>zauber-private-repo</id>
-      <name>private zauber repository</name>
-      <url>https://repo1.zauber.com.ar/default</url>
-     </repository>
+      <releases><enabled>true</enabled></releases>
+      <snapshots><enabled>false</enabled></snapshots>
+      <id>zauber-code-releases</id>
+      <name>Zauber Code Releases</name>
+      <url>https://repo1.zauber.com.ar/zauber/code/releases</url>
+    </repository>
+    <repository>
+      <releases><enabled>false</enabled></releases>
+      <snapshots><enabled>true</enabled></snapshots>
+      <id>zauber-code-snapshots</id>
+      <name>Zauber Code Snapshots</name>
+      <url>https://repo1.zauber.com.ar/zauber/code/snapshots</url>
+    </repository>
   </repositories>
   <modules>
      <module>commons</module>
@@ -35,6 +44,11 @@
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
       <version>2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.2</version>
     </dependency>
   </dependencies>
   <build>
@@ -162,4 +176,18 @@
      </dependency>
     </dependencies>
   </dependencyManagement>
+  <distributionManagement>
+    <repository>
+      <id>zauber-code-releases</id>
+      <name>Zauber Code Releases</name>
+      <url>https://repo1.zauber.com.ar/zauber/code/releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>zauber-code-snapshots</id>
+      <name>Zauber Code Snapshots</name>
+      <url>https://repo1.zauber.com.ar/zauber/code/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
+
+
 </project>
