Se agrega un modulo extraido del Scrummage para trabajar con contenido remoto que sabe obtener InputStreams a partir de URLs

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -14,5 +14,6 @@
     <module>proxy</module>
     <module>version</module>
     <module>transformation</module>
+    <module>rest</module>
   </modules>
 </project>
