--- a/message/api/pom.xml
+++ b/message/api/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>ar.com.zauber.commons.message</groupId>
-    <version>3.13-SNAPSHOT</version>
+    <version>3.14-SNAPHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>commons-message-api</artifactId>
