--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>zauber-commons-parent</artifactId>
     <groupId>ar.com.zauber.commons</groupId>
-    <version>3.14-SNAPHOT</version>
+    <version>3.14-SNAPSHOT</version>
   </parent>
   <name>Zauber::Commons::Lang Common</name>
   <artifactId>commons</artifactId>
