--- a/web/rest/pom.xml
+++ b/web/rest/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>commons-web-parent</artifactId>
     <groupId>ar.com.zauber.commons.web</groupId>
-    <version>3.13-SNAPSHOT</version>
+    <version>3.13</version>
   </parent>
   <name>Zauber::Commons::Web::REST</name>
   <artifactId>commons-web-rest</artifactId>
