nuevo modulo commons-xmpp que contiene clases que se reusan en aplicaciones que se conectan a jabber. Esto viene de zeb y de crono Por ahora tenemos algunas clausuras utiles para mergear contact lists, y configuracion de la conexion.

--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,7 @@
      <module>repository</module>
      <module>exception</module>
      <module>facebook</module>
+     <module>xmpp</module>
      <module>web</module>
      <module>wicket</module>
   </modules>
