Cambios en commons-message-*.  El API de MessageFactory estaba muy acoplado al concepto de email (subject, un contenido de texto, etc).
Es por eso que introduzco ahora el concepto de ViewName para resolver mensajes
(la misma idea de como se resulven vistas en spring mvc).
MessageFactory.

public interface MessageFactory {
    /**
     * Create a {@link Message} refering to the content "by name".
     * 
     * @param viewName name that is used to create the message
     * @param model    model for the message
     * @return        a new message.
     * @throws NoSuchEntityException if the viewname can't be resolved.
     */
    Message createMessage(String viewName, Map<String, Object> model)
            throws NoSuchEntityException;
}

Existen una nueva implementación de MessageFactory llamada
MessageTemplateMessageFactory que resuelve por nombre obtiene un
MessageTemplate y renderea.

public interface MessageTemplate {
    
    /** @return a message given a model */
    Message render(final Map<String, Object> model);
}


Las viejas MessageFactory son ahora MessageTemplate:
   * AbstractMessageFactory es ahora AbstractMessageTemplate
   * NullMessageFactory es ahora NullMessageTemplate
   * VelocityMessageResolver es VelocityMessageTemplate
   * ResourceBundleMessageFactory ResourceBundleMessageTemplate

También adecuo el MessageControllerCommand para reflejar estos cambios.

Muchos de las clases pasan de impl a api ya que son bastante genericas.

Esto ROMPE BUILDs, y requiere migración. Lo bueno es que permitirá agregar mas
semantica al envio de mensajes.

--- a/message/api/pom.xml
+++ b/message/api/pom.xml
@@ -7,4 +7,11 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>commons-message-api</artifactId>
   <name>Zauber::Commons::Message::API</name>
+  
+  <dependencies>
+    <dependency>
+      <groupId>ar.com.zauber.commons</groupId>
+      <artifactId>commons-dao</artifactId>
+    </dependency>
+  </dependencies>
 </project>
