--- a/xmpp/src/test/resources/log4j.properties
+++ b/xmpp/src/test/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=fatal, console
+log4j.rootLogger=warn, console
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
