Muevo de commons-image-api a commons-dao la interface:   ar.com.zauber.common.image.model.Resource a   ar.com.zauber.commons.dao.Resource
ya que la abstraccion esa excede a image y puede ser util en otro contextos

--- a/image/api/pom.xml
+++ b/image/api/pom.xml
@@ -8,4 +8,11 @@
   <name>Zauber::Commons::Image::API</name>
   <artifactId>commons-image-api</artifactId>
   <packaging>jar</packaging>
+  
+  <dependencies>
+    <dependency>
+      <groupId>ar.com.zauber.commons</groupId>
+      <artifactId>commons-dao</artifactId>
+    </dependency>
+  </dependencies>
 </project>
