--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -14,5 +14,10 @@
        <artifactId>commons-lang</artifactId>
        <groupId>commons-lang</groupId>
     </dependency>
+    <dependency>
+       <artifactId>log4j</artifactId>
+       <groupId>log4j</groupId>
+       <scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
