Modulo de Testing

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
      <module>xmpp</module>
      <module>web</module>
      <module>wicket</module>
+     <module>test</module>
   </modules>
   
   <build>
