--- a/jetty-launcher/pom.xml
+++ b/jetty-launcher/pom.xml
@@ -4,7 +4,7 @@
   <parent>
      <artifactId>zauber-commons-parent</artifactId>
      <groupId>ar.com.zauber.commons</groupId>
-     <version>3.16-SNAPSHOT</version>
+     <version>3.16</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>ar.com.zauber.commons</groupId>
