--- a/fts/lucene/pom.xml
+++ b/fts/lucene/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>ar.com.zauber.commons.fts</groupId>
-    <version>3.18</version>
+    <version>3.19-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>commons-fts-lucene</artifactId>
