--- a/gis/pom.xml
+++ b/gis/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>zauber-commons-parent</artifactId>
     <groupId>ar.com.zauber.commons</groupId>
-    <version>3.18</version>
+    <version>3.19-SNAPSHOT</version>
   </parent>
   <name>Zauber::Commons::Gis</name>
   <artifactId>commons-gis</artifactId>
