--- a/web/rest/pom.xml
+++ b/web/rest/pom.xml
@@ -1,27 +1,32 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>commons-web-parent</artifactId>
-    <groupId>ar.com.zauber.commons.web</groupId>
-    <version>3.19-SNAPSHOT</version>
-  </parent>
-  <name>Zauber::Commons::Web::REST</name>
-  <artifactId>commons-web-rest</artifactId>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <artifactId>commons-web-parent</artifactId>
+        <groupId>ar.com.zauber.commons.web</groupId>
+        <version>3.19-SNAPSHOT</version>
+    </parent>
+    <name>Zauber::Commons::Web::REST</name>
+    <artifactId>commons-web-rest</artifactId>
 
-  <dependencies>
-     <dependency>
-        <artifactId>commons-lang</artifactId>
-        <groupId>commons-lang</groupId>
-     </dependency>
-     <dependency>
-        <artifactId>commons-httpclient</artifactId>
-        <groupId>commons-httpclient</groupId>
-        <version>3.1</version>
-     </dependency>
-    <dependency>
-      <groupId>ar.com.zauber.commons</groupId>
-      <artifactId>commons-dao</artifactId>
-      <version>${pom.version}</version>
-    </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <artifactId>commons-lang</artifactId>
+            <groupId>commons-lang</groupId>
+        </dependency>
+        <dependency>
+            <groupId>ar.com.zauber.commons</groupId>
+            <artifactId>commons-dao</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+    </dependencies>
 </project>
