--- a/syndication/pom.xml
+++ b/syndication/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>zauber-commons-parent</artifactId>
     <groupId>ar.com.zauber.commons</groupId>
-    <version>3.20-SNAPSHOT</version>
+    <version>3.20</version>
   </parent>
   <name>Zauber::Commons::Syndication</name>
   <modelVersion>4.0.0</modelVersion>
