--- a/moderation/impl/pom.xml
+++ b/moderation/impl/pom.xml
@@ -11,6 +11,15 @@
 
   <dependencies>
     <dependency>
+      <groupId>ar.com.zauber.commons</groupId>
+      <artifactId>commons</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>ar.com.zauber.commons.auth</groupId>
+      <artifactId>commons-auth-impl</artifactId>
+      <version>${pom.version}</version>
+    </dependency>
+    <dependency>
       <groupId>ar.com.zauber.commons.moderation</groupId>
       <artifactId>commons-moderation-api</artifactId>
     </dependency>
