--- a/moderation/impl/pom.xml
+++ b/moderation/impl/pom.xml
@@ -56,6 +56,12 @@
         <scope>test</scope>
     </dependency>
     <dependency>
+        <groupId>postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>8.4-701.jdbc3</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>commons-dbcp</groupId>
       <artifactId>commons-dbcp</artifactId>
       <version>1.2.2</version>
