Agrego un filtro configurable que desvÃ­a los request cuando no se satisface el valor de algÃºn header.

--- a/web/utils/pom.xml
+++ b/web/utils/pom.xml
@@ -23,6 +23,11 @@
        <groupId>ar.com.zauber.commons.repository</groupId>
      </dependency>
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
        <artifactId>spring-test</artifactId>
        <groupId>org.springframework</groupId>
        <scope>test</scope>
