quito los filtros de resources maven en el proyecto repository porque hace rato que rompe el mvn eclipse:eclispe

--- a/repository/impl/spring-hbm/src/test/resources/repository-impl-springhbm.properties
+++ b/repository/impl/spring-hbm/src/test/resources/repository-impl-springhbm.properties
@@ -15,13 +15,13 @@
 #
 
 # Database
-dataSource.url=${repository-impl-springhbm.dataSource.url}
-dataSource.driverClassName=${repository-impl-springhbm.dataSource.driverClassName}
-dataSource.username=${repository-impl-springhbm.dataSource.username}
-dataSource.password=${repository-impl-springhbm.dataSource.password}
+dataSource.url=jdbc:hsqldb:mem:testdb
+dataSource.driverClassName=org.hsqldb.jdbcDriver
+dataSource.username=sa
+dataSource.password=
 
 # Hibernate
-hibernate.dialect=${repository-impl-springhbm.hibernate.dialect}
-hibernate.hbm2ddl.auto=${repository-impl-springhbm.hibernate.hbm2ddl.auto}
-hibernate.show_sql=${repository-impl-springhbm.hibernate.show_sql}
-hibernate.default_schema=${repository-impl-springhbm.hibernate.default_schema}
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+hibernate.hbm2ddl.auto=create
+hibernate.show_sql=false
+hibernate.default_schema=public
