--- a/repository/impl/spring-hbm/src/test/resources/log4j.properties
+++ b/repository/impl/spring-hbm/src/test/resources/log4j.properties
@@ -14,7 +14,7 @@
 #  limitations under the License.
 #
 
-log4j.rootLogger=${repository-impl-springhbm.log4j.debugLevel}, ${repository-impl-springhbm.log4j.appender}
+log4j.rootLogger=error, console
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
