--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
       <name>Zauber Code Snapshots</name>
       <url>https://repo1.zauber.com.ar/zauber/code/snapshots</url>
     </repository>
+    <repository>
+       <id>springsource maven repo</id>
+       <url>http://maven.springframework.org/milestone</url>
+       <releases><enabled>true</enabled></releases>
+       <snapshots><enabled>false</enabled></snapshots>
+      </repository>
   </repositories>
 
   <pluginRepositories>
@@ -187,7 +193,7 @@
      </dependency>
   </dependencies>
   <properties>
-      <spring.version>2.5.6</spring.version>
+      <spring.version>3.0.0.RC1</spring.version>
       <spring.security.version>2.0.4</spring.security.version>
       <hibernate.version>3.3.1.GA</hibernate.version>
       <hibernate.annotations.version>3.4.0.GA</hibernate.annotations.version>
@@ -443,7 +449,7 @@
      <dependency>
         <groupId>javax.servlet</groupId>
        <artifactId>servlet-api</artifactId>
-       <version>2.4</version>
+       <version>2.5</version>
        <scope>provided</scope>
      </dependency>
     </dependencies>
