--- a/web/rest/pom.xml
+++ b/web/rest/pom.xml
@@ -28,5 +28,10 @@
             <artifactId>ehcache</artifactId>
             <version>1.6.2</version>
         </dependency>
+        <dependency>
+	      <groupId>org.apache.httpcomponents</groupId>
+	      <artifactId>httpclient-osgi</artifactId>
+	      <version>4.0</version>
+	    </dependency>
     </dependencies>
 </project>
