--- a/web/rest/src/test/resources/log4j.properties
+++ b/web/rest/src/test/resources/log4j.properties
@@ -15,7 +15,7 @@
 #
 
 # Setea el nivel de rootLogger a INFO y un Appender llamado FooApender.
-log4j.rootLogger=error, ConsoleApender
+log4j.rootLogger=debug, ConsoleApender
 
 # del tipo ConsoleAppender (salida estandar).
 log4j.appender.ConsoleApender=org.apache.log4j.ConsoleAppender
