Creado subproyecto Converter, con herramientas de conversion a DTOs.

--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
      <module>wicket</module>
      <module>test</module>
      <module>moderation</module>
+     <module>converter</module>
   </modules>
   
   <build>
