commons-uri para centralizar el uso de uris

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -15,5 +15,6 @@
     <module>version</module>
     <module>transformation</module>
     <module>rest</module>
+    <module>uri</module>
   </modules>
 </project>
