--- a/web/uri/pom.xml
+++ b/web/uri/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>commons-web-parent</artifactId>
 		<groupId>ar.com.zauber.commons.web</groupId>
-		<version>3.25</version>
+		<version>3.26-SNAPSHOT</version>
 	</parent>
 	<name>Zauber::Commons::Web::Uri</name>
 	<artifactId>commons-web-uri</artifactId>
